# cc-pagerater

./: .env.sample  Dockerfile  README.md  cc_pagerater.py  cc_pagerater_api.py  config.toml.sample  pyproject.toml  requirements.txt
.github/workflows/: docker-build-push.yml
templates/: index.html
